--- a/Trabalho de C/Trabalho de C/Trabalho de C.vcxproj
+++ b/Trabalho de C/Trabalho de C/Trabalho de C.vcxproj
@@ -146,6 +146,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="Board.c" />
     <ClCompile Include="Listas.c" />
   </ItemGroup>
   <ItemGroup>
