--- a/Trabalho de C/Trabalho de C/Trabalho de C.vcxproj.filters
+++ b/Trabalho de C/Trabalho de C/Trabalho de C.vcxproj.filters
@@ -21,6 +21,9 @@
     <ClCompile Include="Board.c">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="main.c">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Listas.h">
