--- a/Trabalho de C/Trabalho de C/Trabalho de C.vcxproj
+++ b/Trabalho de C/Trabalho de C/Trabalho de C.vcxproj
@@ -147,12 +147,12 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="Board.c" />
+    <ClCompile Include="InputOutput.c" />
     <ClCompile Include="Listas.c" />
     <ClCompile Include="main.c" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Main.h" />
-    <ClInclude Include="Listas.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
